# sqlite-utils-shell

./: README.md  pyproject.toml  sqlite_utils_shell.py
tests/: test_shell.py
